--- a/info/templates/news/base.html
+++ b/info/templates/news/base.html
@@ -50,24 +50,29 @@
 
     <div class="conter_con">
 
-        {% block contentBlock %}{% endblock %}
+        {% block contentBlock %}
+        {% endblock %}
+
 
         <div class="rank_con fr">
 
-                {% block authorBlock %}
-                {# 给作者信息占位 #}
-                {% endblock %}
+            {% block authorBlock %}
+            {# 给作者信息占位 #}
+            {% endblock %}
 
-                <div class="rank_title">
-                    <h3>点击排行</h3>
-                </div>
-                <ul class="rank_list">
-                    {% for news in data.news_dict_li %}
-                    {#采用自定义过滤器的方式来给前三个点击量的新闻前面加上样式#}
-                        <li><span class="{{ loop.index0 | index_class }}">{{ loop.index }}</span><a href="#">{{ news.title }}</a></li>
-                    {% endfor %}
-                </ul>
+            <div class="rank_title">
+                <h3>点击排行</h3>
             </div>
+
+
+            <ul class="rank_list">
+            {% for news in data.news_dict_li %}
+{#                         采用自定义过滤器的方式来给前三个点击量的新闻前面加上样式#}
+                <li><span class="{{ loop.index0 | index_class }}">{{ loop.index }}</span><a href="#">{{ news.title }}</a></li>
+            {% endfor %}
+            </ul>
+
+        </div>
 
 
     </div>
