--- a/info/templates/news/detail.html
+++ b/info/templates/news/detail.html
@@ -32,26 +32,26 @@
 
 
         {% if data.user %}
-        <form action="" class="comment_form" data-newsid="{{ data.news.id }}">
-            <div class="person_pic">
-                <img src="{% if data.user.avatar_url %}
-                    {{ data.user.avatar_url }}
-                {% else %}
-                    ../../static/news/images/person01.png
-                {% endif %}" alt="用户图标">
+            <form action="" class="comment_form" data-newsid="{{ data.news.id }}">
+                <div class="person_pic">
+                    <img src="{% if data.user.avatar_url %}
+                        {{ data.user.avatar_url }}
+                    {% else %}
+                        ../../static/news/images/person01.png
+                    {% endif %}" alt="用户图标">
+                </div>
+                <textarea placeholder="请发表您的评论" class="comment_input"></textarea>
+                <input type="submit" name="" value="评 论" class="comment_sub">
+            </form>
+        {% else %}
+            <div class="comment_form_logout">
+                登录发表你的评论
             </div>
-            <textarea placeholder="请发表您的评论" class="comment_input"></textarea>
-            <input type="submit" name="" value="评 论" class="comment_sub">
-        </form>
-    {% else %}
-        <div class="comment_form_logout">
-            登录发表你的评论
-        </div>
-    {% endif %}
+        {% endif %}
 
 
         <div class="comment_count">
-            4条评论
+            {{ data.news.comments_count }}条评论
         </div>
 
         <div class="comment_list_con">
