--- a/info/templates/news/base.html
+++ b/info/templates/news/base.html
@@ -59,6 +59,8 @@
             {% block authorBlock %}
             {# 给作者信息占位 #}
             {% endblock %}
+        {% block ranlBlock %}
+
 
             <div class="rank_title">
                 <h3>点击排行</h3>
@@ -71,7 +73,7 @@
                 <li><span class="{{ loop.index0 | index_class }}">{{ loop.index }}</span><a href="#">{{ news.title }}</a></li>
             {% endfor %}
             </ul>
-
+        {% endblock %}
         </div>
 
 
