--- a/info/templates/news/user.html
+++ b/info/templates/news/user.html
@@ -16,7 +16,7 @@
         <div class="user_center_name">{{ data.user.nick_name }}</div>
 
         <ul class="option_list">
-            <li class="active"><a href="../../static/news/html/user_base_info.html" target="main_frame">基本资料</a></li>
+            <li class="active"><a href="{{ url_for("profile.base_info") }}" target="main_frame">基本资料</a></li>
             <li><a href="../../static/news/html/user_pic_info.html" target="main_frame">头像设置</a></li>
             <li><a href="../../static/news/html/user_follow.html" target="main_frame">我的关注</a></li>
             <li><a href="../../static/news/html/user_pass_info.html" target="main_frame">密码修改</a></li>
@@ -24,6 +24,11 @@
             <li><a href="../../static/news/html/user_news_release.html" target="main_frame">新闻发布</a></li>
             <li><a href="../../static/news/html/user_news_list.html" target="main_frame">新闻列表</a></li>
         </ul>
+    </div>
+
+    {#  下面的div标签是默认选中user_base_info这一个  #}
+    <div class="user_con fr">
+        <iframe src="{{ url_for("profile.base_info") }}" frameborder="0" name="main_frame" class="main_frame" id="main_frame"></iframe>
     </div>
 {% endblock %}
 
