--- a/info/templates/news/user.html
+++ b/info/templates/news/user.html
@@ -16,10 +16,11 @@
         <div class="user_center_name">{{ data.user.nick_name }}</div>
 
         <ul class="option_list">
+            {#target="main_frame"  的作用是,不会跳转到新的窗口打开页面#}
             <li class="active"><a href="{{ url_for("profile.base_info") }}" target="main_frame">基本资料</a></li>
             <li><a href="{{ url_for("profile.pic_info") }}" target="main_frame">头像设置</a></li>
             <li><a href="../../static/news/html/user_follow.html" target="main_frame">我的关注</a></li>
-            <li><a href="../../static/news/html/user_pass_info.html" target="main_frame">密码修改</a></li>
+            <li><a href="{{ url_for("profile.pass_info") }}" target="main_frame">密码修改</a></li>
             <li><a href="../../static/news/html/user_collection.html" target="main_frame">我的收藏</a></li>
             <li><a href="../../static/news/html/user_news_release.html" target="main_frame">新闻发布</a></li>
             <li><a href="../../static/news/html/user_news_list.html" target="main_frame">新闻列表</a></li>
