--- a/info/templates/news/base.html
+++ b/info/templates/news/base.html
@@ -35,7 +35,9 @@
                 <!-- 用户登录后显示下面，隐藏上面 -->
                 <div class="user_login fr">
                 <img src="{% if data.user.avatar_url %} {{ data.user.avatar_url }} {% else %}../../static/news/images/person01.png{% endif %}" class="lgin_pic">
-                <a href="#" id="nick_name">{{ data.user.nick_name }}</a>
+
+                <a href="/user/info" id="nick_name">{{ data.user.nick_name }}</a>
+
                 <a href="javascript:;" onclick="logout()">退出</a>
                 </div>
             {% else %}
@@ -78,7 +80,9 @@
 
 
     </div>
-    <div class="footer">
+
+    {% block bottomBlock %}
+        <div class="footer">
         <div class="footer_links">
             <a href="">关于我们</a>
             <span>|</span>
@@ -90,9 +94,11 @@
         </div>
         <p class="copyright">
             CopyRight © 2018 新经资讯信息技术有限公司 All Rights Reserved<br />
-电话：010-****888    京ICP备*******8号
+            电话：010-****888    京ICP备*******8号
         </p>
     </div>
+    {% endblock %}
+
 
     <!-- 登录表单 -->
     <form class="login_form_con">
