--- a/info/templates/news/user.html
+++ b/info/templates/news/user.html
@@ -19,7 +19,7 @@
             {#target="main_frame"  的作用是,不会跳转到新的窗口打开页面#}
             <li class="active"><a href="{{ url_for("profile.base_info") }}" target="main_frame">基本资料</a></li>
             <li><a href="{{ url_for("profile.pic_info") }}" target="main_frame">头像设置</a></li>
-            <li><a href="../../static/news/html/user_follow.html" target="main_frame">我的关注</a></li>
+            <li><a href="{{ url_for("profile.user_follow") }}" target="main_frame">我的关注</a></li>
             <li><a href="{{ url_for("profile.pass_info") }}" target="main_frame">密码修改</a></li>
             <li><a href="{{ url_for("profile.user_collection") }}" target="main_frame">我的收藏</a></li>
             <li><a href="{{ url_for("profile.news_release") }}" target="main_frame">新闻发布</a></li>
